Created a custom module in replaceHtml.js file and added on method for creating server

--- a/Template/contacts-data.html
+++ b/Template/contacts-data.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #000;
             margin: 0;
             padding: 0;
             display: flex;
@@ -17,7 +17,7 @@
         }
 
         .contact-card {
-            background-color: #fff;
+            background-color: #545151;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             overflow: hidden;
@@ -38,22 +38,24 @@
         }
 
         .contact-details {
+            color: aliceblue;
             padding: 15px;
         }
 
         .contact-name {
+            color: aliceblue;
             font-size: 18px;
             font-weight: bold;
             margin-bottom: 5px;
         }
 
         .contact-email {
-            color: #555;
+            color: aliceblue;
             margin-bottom: 10px;
         }
 
         .contact-phone {
-            color: #555;
+            color:aliceblue;
         }
     </style>
 </head>
