--- a/Template/prod-details.html
+++ b/Template/prod-details.html
@@ -13,7 +13,7 @@
 					<p class="product-desc-p"><b>Behaviour: </b>{{%BEHAVIOUR%}}</p>
 					<p class="product-desc-p"><b>Model Number: </b>{{%MODELNO%}}</p>
 					<p class="product-desc-p"><b>Model Name: </b>{{%MODELNAME%}}</p>
-					<p class="product-desc-p"><b>DESCRIPTION: </b>{{%DESCRIPTION%}}</p>
+					<p class="product-desc-p"><b>Description: </b>{{%DESCRIPTION%}}</p>
 				</div>
 				<div class="product-details-desc">
 					<h3>Product Description: </h3>
