--- a/Template/product-list.html
+++ b/Template/product-list.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="products-detail">
-        <div class="product-info"><h4>Price: ${{%PRICE%}}</h4></div>
+        <div class="product-info"><h4>Price: {{%PRICE%}}</h4></div>
         <div class="product-info"><h4>Color: {{%COLOR%}}</h4></div>
         <div class="product-info">
             <a href="/products?id={{%ID%}}" class="btn btn-secondary">Show Details</a>
